# opencode-tools

./: .gitignore  CHANGELOG.md  LICENSE  QUALITY.md  README.md  audit.ts  calltrace.py  changelog.py  changelog.ts  check.py  churn.py  common.py  deeper_tests.py  fmt.py  ghost.py  ghost.ts  graph.py  graph.ts  hashline.py  hashline.ts  health.py  impact.py  impact.ts  install.bat  install.ps1  install.sh  lint.py  lint.ts  package.json  pyproject.toml  refactor.py  refactor.ts  regression_tests.py  rename.py  rename.ts  report.py  report.ts  search.py  search.ts  smoke_test.py  (+31 more)
.github/workflows/: ci.yml
.opencode/plugins/: calltrace.ts  churn.ts  common.py  graph.ts  health.ts  lint.ts  refactor.ts  tags.ts  utils.ts  verify.ts
plugins/: calltrace.ts  changelog.ts  check.ts  fmt.ts  hashline.ts  impact.ts  rename.ts  search.ts  snapshot.ts  tags.ts  todo.ts  utils.ts
src/: audit.py  calltrace.py  changelog.py  churn.py  common.py  fmt.py  ghost.py  graph.py  health.py  impact.py  lint.py  refactor.py  report.py  snapshot.py  tags.py  todo.py  verify.py
tests/: deeper_tests.py  regression_tests.py  smoke_test.py  stress_test.py  stress_tools.py  test_changelog.py  test_graph.py  test_hashline.py  test_impact.py  test_installers.py  test_lint.py  test_new_tools.py  test_refactor.py  test_regression.py  test_search.py  test_trace.py  test_verify.py
