[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-tools"
version = "0.5.0"
description = "OpenCode plugin suite — CLI tools for AI-assisted coding (graph, impact, lint, refactor, ...)"
requires-python = ">=3.11"

[project.scripts]
graph = "graph:main"
changelog = "changelog:main"
impact = "impact:main"
lint = "lint:main"
refactor = "refactor:main"
rename = "rename:main"
verify = "verify:main"
search = "search:main"
calltrace = "calltrace:main"
hashline = "hashline:main"
health = "health:main"
snapshot = "snapshot:main"
todo = "todo:main"
tags = "tags:main"

[tool.setuptools]
py-modules = [
    "common", "graph", "changelog", "impact", "lint", "refactor",
    "rename", "verify", "search", "calltrace", "hashline", "health", "snapshot", "todo", "tags",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E701", "E702", "E402", "F541"]
